# Project_QuantStrategy_with_backtesting

./: .gitattributes  README.md  pyproject.toml
data/: cbonds-usa-corporate-index_upd.xlsx  quotes_upd.csv  rates.csv
notebooks/: data_preprocessing.py  main.ipynb  metrics.py  strategy.py
